Minor Fix: Mobile Menu Overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,6 +211,14 @@ nav a {
     height: 40px;
 }
 
+.mobile-menu {
+    overflow: visible;
+}
+
+.mobile-socials {
+    overflow: visible;
+}
+
 #hero {
     width: 80vw;
     min-height: 90vh;
